Fixed Wall Jumping and added Super Jump - Made the player able to slide all the way down a wall whereas before they would be teleported down once 2 points where no longer in contact with the wall, this was done by altering the conditions in the updateCollisionConstants method - Made it so the player is able to wall jump and slide correctly on the left sides of walls, the tiles are all shifted to the left by one pixel or so it seems so there might be an issue in my MapManager class - Added the ability to super jump if the player holds down long enough, this was done through the addition of a shouldSuperJump boolean instance variable and a superJumpCount int instance variable as well as altering some of the conditions in the updatePosition method - Cleaned up some bits of code